--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,11 +16,16 @@ body{
     color: var(--primary);
 }
 
+h2{
+    transform: rotate(-90deg);
+    color: var(--header);
+}
+
 /* navbar styling */
 .navbar{
     display: flex;
     justify-content: flex-end;
-    color: #FFFFFE; !important
+    color: #FFFFFE;
 }
 
 /* hero section styling */
@@ -28,7 +33,7 @@ body{
     background-color: var(--primary);
     color: var(--header);
     text-align: center;
-    margin: 70px auto
+    margin: 100px auto 150px auto
 }
 
 /* projects section styling */
@@ -51,6 +56,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
     margin: 10px;
 }
 
@@ -59,5 +65,5 @@ body{
 }
 
 .linkedin{
-    max-height: 2px;
+    max-height: 40px;
 }
