--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,7 +24,6 @@ body{
 .navbar{
     display: flex;
     justify-content: flex-end;
-    color: #FFFFFE;
 }
 
 /* hero section styling */
@@ -45,6 +44,11 @@ body{
 }
 
 /* skills + about/contact me sections styling */
+.skillsRow, .aboutRow{
+    display: flex;
+    justify-content: center;
+}
+
 .card-body{
     background-color: var(--card-bg);
     border-radius: 10px;
@@ -54,11 +58,22 @@ body{
     margin-right: 40px;
     padding: 30px;
     box-shadow: 0px 0px 20px 0.01px var(--card-bg);
+    max-width: 350px;
 }
 
-.skillsRow, .aboutRow{
+.card-body-content{
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: space-between;
+}
+
+.card-column-right, .card-column-left{
+    padding-top: 10px;
+}
+
+.card-column-left{
+    padding-bottom: 16px;
 }
 
 /* footer styling */
